--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <title>Cali Fast Drive</title>
@@ -21,6 +21,7 @@
 
 <section id="home" class="page active">
   <h2>Service rapide & fiable</h2>
+  <img src="images/voiture.png" alt="Voiture rapide" style="width:200px;">
   <p>Disponible 24/7</p>
 </section>
 
@@ -29,20 +30,3 @@
   <ul>
     <li>🚗 Livraison express</li>
     <li>📦 Transport colis</li>
-    <li>🕒 Service urgent</li>
-  </ul>
-</section>
-
-<section id="tarifs" class="page">
-  <h2>Tarifs</h2>
-  <p>À partir de 10€</p>
-</section>
-
-<section id="contact" class="page">
-  <h2>Contact</h2>
-  <button onclick="commander()">Commander</button>
-</section>
-
-<script src="app.js"></script>
-</body>
-</html>
