--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <section id="home" class="page active">
   <h2>Service rapide & fiable</h2>
-  <img src="images/voiture.png" alt="Voiture rapide" style="width:200px;">
+  <img src="768x6uLunhNp8gKZWKPOAIhvQSt1-gh13hki.png" alt="Voiture rapide" style="width:200px;">
   <p>Disponible 24/7</p>
 </section>
 
